# cvestat

./: README.md  pyproject.toml
src/cvestat/: cve_stat.py  cvestat.py  global_logger.py  local_data.py  nvd_cve.py  time_stamp.py
tests/: main.py
