[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvestat"
version = "0.0.1"
authors = [
  { name="Ryan Wong", email="colorfulshark@gmail.com" },
]
description = "A tool for searching CVEs in various ways"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "appdirs",
    "cpe",
    "sqlalchemy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
cvestat = "cvestat.cve_stat:main"

[project.urls]
"Homepage" = "https://github.com/colorfulshark/cvestat"
"Bug Tracker" = "https://github.com/colorfulshark/cvestat/issues"
